カード情報取得のAPIの作成とidとmethodを取得するselectorの作成

--- a/firebase.json
+++ b/firebase.json
@@ -11,9 +11,13 @@
       "**/node_modules/**"
     ],
     "rewrites": [
-        {
+      {
         "source": "/v1/customer",
         "function": "stripeCustomer"
+      },
+      {
+        "source": "/v1/paymentMethpd",
+        "destination": "retrievePaymentMethod"
       },
       {
         "source": "**",
